tests/ui/consts/const-block-const-bound.stderr
error[E0277]: can't drop `UnconstDrop` in const contexts
  --> $DIR/const-block-const-bound.rs:20:9
   |
LL |         f(UnconstDrop);
   |         ^^^^^^^^^^^^^^ the trait `~const Destruct` is not implemented for `UnconstDrop`
   |
   = note: the trait bound `UnconstDrop: ~const Destruct` is not satisfied
help: consider borrowing here
   |
LL |         &f(UnconstDrop);
   |         +
LL |         &mut f(UnconstDrop);
   |         ++++

error[E0277]: can't drop `NonDrop` in const contexts
  --> $DIR/const-block-const-bound.rs:22:9
   |
LL |         f(NonDrop);
   |         ^^^^^^^^^^ the trait `~const Destruct` is not implemented for `NonDrop`
   |
   = note: the trait bound `NonDrop: ~const Destruct` is not satisfied
help: consider borrowing here
   |
LL |         &f(NonDrop);
   |         +
LL |         &mut f(NonDrop);
   |         ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
